# BK-System

./: .clang-format  .gitignore  BK-System.code-workspace  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config.json  imgui.ini
.github/worflows/: ci.yml
.github/workflows/: ci.yml
ConfigManager/include/: ConfigManager.hpp
ConfigManager/src/: ConfigManager.cpp
ConfigurationManager/: CMakeLists.txt
ConfigurationManager/include/: ConfigurationManager.hpp
ConfigurationManager/src/: ConfigurationManager.cpp
DBHandler/: CMakeLists.txt
DBHandler/Core/: CMakeLists.txt
DBHandler/Core/include/: IDBClient.hpp  IDBServer.hpp
DBHandler/MariaDB/include/: MDBClient.hpp  MDBServer.hpp
DBHandler/MariaDB/src/: MDBClient.cpp  MDBServer.cpp
Reports/: CMakeLists.txt
Reports/include/: ReportGenerator.hpp
Reports/src/: ReportGenerator.cpp
include/: BKSystem.hpp
src/: BKSystem.cpp  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp
